# ece5730-labs

Audio/: CMakeLists.txt
Audio/h_beep_keypad/: CMakeLists.txt  beep_keypad.c
Sensors/MPU6050_IMU_Demo/: CMakeLists.txt  imu_demo.c
VGA_Graphics/Animation_Demo/: animation.c  rgb.pio
